Changed Profile pic directory

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="C:\Users\syeds\OneDrive\Desktop\Web dev\HTML - PERSONAL SITE\Images\profilepic.png" alt="Saboor's Profile" style="width:300px;height:300px;"</td>
+      <td><img src="https://github.com/saboorsyed/CV/blob/main/Images/profilepic.png" alt="Saboor's Profile" style="width:300px;height:300px;"</td>
       <td><h1>Saboor Syed</h1>
       <h3><em><strong>Cinephile. Leaner. Coder</strong></em></h3>I am a <strong>B.Tech graduate</strong> from <STRONG>Vaageswari College Of Engineering.</STRONG> Currently learning <strong>Web Development</strong> and upskilling myself</td>
     </tr>
